examples/negative/parse_errors/L1/reserved_mod.ob
MODULE Reserved;

VAR MOD: INTEGER;

END Reserved.
